public interface surroundings{
    void surround();
}
